--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<h1>Olá me chamo Rogerio Kayronny</h1>
+<h1>Oi me chamo Rogerio Kayronny</h1>
     <button onclick= "alertar()">Me aperte</button>
 
 </body>
